--- a/overlay/custom/common/SonyLenaFrameworksResCommon/res/values/config.xml
+++ b/overlay/custom/common/SonyLenaFrameworksResCommon/res/values/config.xml
@@ -533,5 +533,12 @@
         <item>-0.4376923077</item>
     </string-array>
 
+    <!-- Delay that allows some content to arrive at the display before switching
+         from DOZE to ON, in millis. -->
+    <integer name="config_wakeUpDelayDoze">32</integer>
+
+    <!-- Default value for performant auth feature. -->
+    <bool name="config_performantAuthDefault">true</bool>
+
 </resources>
 
