lena: overlay: adjust status bar padding values
* Tweaked the left and right padding values (as per vayu)
*  Changed the burn in shift values as they were too aggressive with shifting the UI elements

Signed-off-by: saku-bruh <notwolfyy@gmail.com>

--- a/overlay/custom/common/SonyLenaFrameworksResCommon/res/values/config.xml
+++ b/overlay/custom/common/SonyLenaFrameworksResCommon/res/values/config.xml
@@ -492,6 +492,11 @@
         <item>3</item>
     </integer-array>
 
+     <!-- Height of the status bar -->
+    <dimen name="status_bar_height_default">126.0px</dimen>
+    <dimen name="status_bar_height_portrait">126.0px</dimen>
+    <dimen name="status_bar_height_landscape">24dip</dimen>
+
     <!-- Whether the new Auto Selection Network UI should be shown -->
     <bool name="config_enableNewAutoSelectNetworkUI">true</bool>
 
